@@ -609,6 +609,7 @@ URJ_DRIVER_SET([bus], [
 	lh7a400
 	mpc5200
 	mpc824x
+	mpc8313
 	mpc837x
 	ppc405ep
 	ppc440gx_ebc8
